Fix the miss-place bug on mobile Fixed the miss-placed ships on mobile by reducing the size of the draggable ships

--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -55,8 +55,8 @@
   }
 
   .square {
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     border: 1px solid black;
     background-color: azure;
   }
